Fix: Save dependencies to package.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "homepage": "https://github.com/littlebits/babel-preset-littlebits#readme",
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.4.0",
     "babel-plugin-transform-es2015-template-literals": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13"
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13"
   }
 }
